--- a/orphanage.html
+++ b/orphanage.html
@@ -31,38 +31,46 @@
   </head>
   <body id="body">
     <div id="page-orphanage">
-      <aside class="animate-right"></aside>
+      <aside class="animate-right sidebar">
+        <img src="./public/images/map-marker.svg" alt="Happy">
 
-      <main>
+        <footer>
+          <button onclick="history.back()">
+            <img src="./public/images/arrow-back.svg" alt="Voltar">
+          </button>
+        </footer>
+      </aside>
+
+      <main class="animate-appear with-sidebar">
         <div class="orphanage-details">
           <img src="./public/images/home.jpg" alt="Lar das meninas" />
 
           <div class="images">
-            <button class="active" type="button">
-              <img src="./public/images/home.jpg" alt="Lar das meninas" />
+            <button onclick="selectImage(event)" class="active" type="button">
+              <img src="https://source.unsplash.com/random?id=1" alt="Lar das meninas" />
             </button>
 
-            <button type="button">
-              <img src="./public/images/home.jpg" alt="Lar das meninas" />
+            <button onclick="selectImage(event)" type="button">
+              <img src="https://source.unsplash.com/random?id=2" alt="Lar das meninas" />
             </button>
 
-            <button type="button">
-              <img src="./public/images/home.jpg" alt="Lar das meninas" />
+            <button onclick="selectImage(event)" type="button">
+              <img src="https://source.unsplash.com/random?id=3" alt="Lar das meninas" />
             </button>
 
-            <button type="button">
-              <img src="./public/images/home.jpg" alt="Lar das meninas" />
+            <button onclick="selectImage(event)" type="button">
+              <img src="https://source.unsplash.com/random?id=4" alt="Lar das meninas" />
             </button>
 
-            <button type="button">
-              <img src="./public/images/home.jpg" alt="Lar das meninas" />
+            <button onclick="selectImage(event)" type="button">
+              <img src="https://source.unsplash.com/random?id=5" alt="Lar das meninas" />
             </button>
 
-            <button type="button">
-              <img src="./public/images/home.jpg" alt="Lar das meninas" />
+            <button onclick="selectImage(event)" type="button">
+              <img src="https://source.unsplash.com/random?id=6" alt="Lar das meninas" />
             </button>
           </div>
-          <div class="orpahanage-details-content">
+          <div class="orphanage-details-content">
             <h1>Lar das meninas</h1>
 
             <p>
