--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -53,6 +53,9 @@
             <div class="map-container">
               <div id="mapid"></div>
 
+              <input type="hidden" name="lat">
+              <input type="hidden" name="lng">
+
               <footer>
                 <a href="#" id="select-point">
                   Clique no mapa para adicionar a localização
@@ -84,7 +87,7 @@
 
                 <div class="new-upload">
                   <input name="images" placeholder="Cole o link da foto aqui" required/>
-                  <span>
+                  <span onclick="deleteField(event)">
                     <img src="./public/images/remove-file.svg" alt="Remover foto">
                   </span>
                 </div>
@@ -94,7 +97,7 @@
 
 
 
-              <button type="button">
+              <button onclick="addPhotoField()" type="button">
                 <img src="./public/images/add-file.svg" alt="Nova imagem" />
               </button>
             </div>
@@ -124,8 +127,14 @@
               />
 
               <div class="button-select">
-                <button type="button" class="active">Sim</button>
-                <button type="button" >Não</button>
+                <button data-value="1"
+                onclick="toggleSelect(event)" 
+                type="button" 
+                class="active">Sim</button>
+                <button data-value="0"
+                onclick="toggleSelect(event)" 
+                type="button" 
+                >Não</button>
               </div> 
 
               <button type="submit" class="primary-button">
